tests/test_assets/semantic/invalid/mutation/compound_bitwise_literal_range.cog
compound_bitwise_literal_range::() -> void {
    unsigned8: u8 = 1;
    signed8: i8 = 1;

    unsigned8 &= 256;
    unsigned8 |= -1;
    signed8 ^= 128;
    unsigned8 &= 250 + 6;
}
