tests/test_assets/semantic/invalid/mutation/compound_bitwise_literal_range.expected
semantic error at line 5: integer constant operand does not fit compound assignment type
semantic error at line 6: integer constant operand does not fit compound assignment type
semantic error at line 7: integer constant operand does not fit compound assignment type
semantic error at line 8: integer constant operand does not fit compound assignment type
4 semantic errors generated.
